--- a/sudokuSolver/frontpage/templates/frontpage/front_page.html
+++ b/sudokuSolver/frontpage/templates/frontpage/front_page.html
@@ -7,5 +7,19 @@
 <body>
     <h1>front page</h1>
     <h2>Welcome to SudokuSolver</h2>
+
+
+    <div>
+        <a href="solve/bytype/"><input type="button" value="solve by type"></a>
+        <a href="solve/bypic/"><input type="button" value="solve by picture"></a>
+        <a href="solve/posts/"><input type="button" value="posts"></a>
+    </div>
+    <div>
+        <a href=""><input type="button" value="Home"></a>
+    </div>
+
+
+
+
 </body>
 </html>
