--- a/sudokuSolver/sudoku/templates/sudoku/image_form.html
+++ b/sudokuSolver/sudoku/templates/sudoku/image_form.html
@@ -1,26 +1,68 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>SolveSudoku</title>
-</head>
-<body>
-    <h1>solve by picture</h1>
+{% extends 'sudoku/base.html' %}
 
-    <div>
-        <form method="post" enctype="multipart/form-data" action=""> {% csrf_token %}
-            <table>
+{% block contents %}
+
+<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
+    <div class="col-md-5 p-lg-5 mx-auto my-5">
+        <h1 class="display-4 font-weight-normal">스도쿠 사진을 업로드 하세요!</h1>
+        <p class="lead font-weight-normal" id="loading">사진 한 방에 끝.</p>
+    </div>
+
+    <img id="output" src="#" alt="your image" style="width: 480px; height: 720px; margin-bottom: 30px"/>
+
+    <div class="input-group mb-3">
+<!--        <div class="input-group-prepend">-->
+<!--            <span class="input-group-text" id="inputGroupFileAddon01">Upload</span>-->
+<!--        </div>-->
+        <div class="custom-file" style="alignment: center;">
+            <form method="post" enctype="multipart/form-data" id="imgUpdateform" action=""> {% csrf_token %}
+<!--                <input type="file" class="custom-file-input" id="ImgInput" aria-describedby="inputGroupFileAddon01" accept="image/*" onchange="loadFile(event)">-->
+<!--                <label class="custom-file-label" for="ImgInput">Choose file</label>-->
                 {{ form }}
-            </table>
-            <input type="submit" value="upload">
-        </form>
-
+                <button type="submit">Solve</button>
+            </form>
+        </div>
     </div>
+</div>
+
+<!--<form method="post" enctype="multipart/form-data"> {% csrf_token %}-->
+<!--    {{ form.as_p }}-->
+<!--    <input type="submit" value="Solve" />-->
+<!--</form>-->
 
 
-    <div>
-        <a href="http://127.0.0.1:8000"><input type="button" value="Home"></a>
-    </div>
+</div>
+    <div class="product-device shadow-sm d-none d-md-block"></div>
+    <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
+</div>
 
-</body>
-</html>
+<script>
+    var loadFile = function (event) {
+        var output = document.getElementById('output');
+        output.src = URL.createObjectURL(event.target.files[0]);
+        output.onload = function () {
+            URL.revokeObjectURL(output.src)
+        };
+
+        document.getElementById("loading").innerText = "잠시만 기다려주세요..!";
+        // document.getElementById("imgUpdateform").submit();
+    }
+
+</script>
+
+<!--<h1>solve by picture</h1>-->
+
+<!--<div>-->
+<!--    <form method="post" enctype="multipart/form-data" action="" > {% csrf_token %}-->
+<!--        {{ form }}-->
+<!--        <button type="submit">Solve</button>-->
+<!--    </form>-->
+
+<!--</div>-->
+
+
+<!--<div>-->
+<!--    <a href="http://127.0.0.1:8000"><input type="button" value="Home"></a>-->
+<!--</div>-->
+
+{% endblock %}
