--- a/sudokuSolver/sudoku/templates/sudoku/solved_by_picture.html
+++ b/sudokuSolver/sudoku/templates/sudoku/solved_by_picture.html
@@ -1,22 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>SolveSudoku</title>
-</head>
-<body>
-    <h1>solve by picture</h1>
+{% extends 'sudoku/base.html' %}
+
+{% block contents %}
+
+<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
+    <div class="col-md-5 p-lg-5 mx-auto my-5">
+        <h1 class="display-4 font-weight-normal">쨘!</h1>
+    </div>
+    <img src="{{ img.sudoku_image.url }}" alt="your image" style="width: 480px; height: 720px; margin-bottom: 30px"/>
+    <img src="{{ img.sudoku_image_result.url }}" alt="your image" style="width: 480px; height: 720px; margin-bottom: 30px"/>
 
     <div>
-        <img src="{{ img.sudoku_image.url }}" alt="maong" style="width: 320px; height: 480px;">&nbsp;&nbsp;
-        {% if img.sudoku_image_result %}
-            <img src="{{ img.sudoku_image_result.url }}" alt="miaong" style="width: 320px; height: 480px;">
-        {% endif %}
+        <a href="http://127.0.0.1:8000" class="btn btn-primary" type="submit" style="width: 10%;">돌아가기</a>
     </div>
+</div>
 
-    <div>
-        <a href="http://127.0.0.1:8000"><input type="button" value="Home"></a>
-    </div>
 
-</body>
-</html>
+
+</div>
+    <div class="product-device shadow-sm d-none d-md-block"></div>
+    <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
+</div>
+
+{% endblock %}
