--- a/sudokuSolver/sudoku/templates/sudoku/solved_by_type.html
+++ b/sudokuSolver/sudoku/templates/sudoku/solved_by_type.html
@@ -1,35 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>SolveSudoku</title>
-</head>
-<body>
-    <h1>solve by type</h1>
+{% extends 'sudoku/base.html' %}
 
-    <!DOCTYPE html>
+{% block contents %}
+
     <style>
-    table, th, td {
-        border: 1px solid black;
-        border-collapse: collapse;
-    }
-
-    th, td {
-        padding: 10px;
-    }
-
-    textarea,input {
-        border: 0px;
-        resize: none;
-        width: 15px;
-    }
+        input, td {
+            border: 1px;
+            resize: none;
+            width: 75px;
+            height: 75px;
+            font-size: 25px;
+            text-align: center;
+            outline-style: solid;
+        }
     </style>
 
-    <!--table-->
+    <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
+      <div class="col-md-5 p-lg-5 mx-auto my-5">
+        <h1 class="display-4 font-weight-normal">쨘!<br> </h1>
+      </div>
+      <div>
+<!--        <form method="post" enctype="multipart/form-data" action="" >-->
 
-    <form method="post" enctype="multipart/form-data" action="">
         {% csrf_token %}
-        <table>
+        <table style="outline-style: solid; border: 1px; margin: auto; text-align: center; margin-bottom: 30px;">
             <tr>
                 <td>{{ n11 }}
                 <td>{{ n12 }}
@@ -130,12 +123,25 @@
                 <td>{{ n99 }}
             </tr>
         </table>
-        <input type="submit" style="width: 10%;">
-    </form>
 
-    <div>
-        <a href="http://127.0.0.1:8000"><input type="button" value="Home" style="width: 10%;"></a>
+<!--    </form>-->
+      <div>
+          <a href="http://127.0.0.1:8000" class="btn btn-primary" type="submit" style="width: 10%;">돌아가기</a>
+      </div>
+
+      </div>
+      <div class="product-device shadow-sm d-none d-md-block"></div>
+      <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
     </div>
 
-</body>
-</html>
+{% endblock %}
+
+
+
+
+
+
+
+
+
+
