--- a/sudokuSolver/sudoku/templates/sudoku/posts.html
+++ b/sudokuSolver/sudoku/templates/sudoku/posts.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>Posts for solved sudokus</h1>
-    <a href="http://127.0.0.1:8000"><input type="button" value="Home"></a>
+    <a href="/"><input type="button" value="Home"></a>
 </body>
 </html>
