--- a/sudokuSolver/sudoku/templates/sudoku/solved_by_picture.html
+++ b/sudokuSolver/sudoku/templates/sudoku/solved_by_picture.html
@@ -10,7 +10,7 @@
     <img src="{{ img.sudoku_image_result.url }}" alt="your image" style="width: 480px; height: 720px; margin-bottom: 30px"/>
 
     <div>
-        <a href="http://127.0.0.1:8000" class="btn btn-primary" type="submit" style="width: 10%;">돌아가기</a>
+        <a href="/" class="btn btn-primary" type="submit" style="width: 10%;">돌아가기</a>
     </div>
 </div>
 
