--- a/sudokuSolver/sudoku/templates/sudoku/solved_by_type.html
+++ b/sudokuSolver/sudoku/templates/sudoku/solved_by_type.html
@@ -126,7 +126,7 @@
 
 <!--    </form>-->
       <div>
-          <a href="http://127.0.0.1:8000" class="btn btn-primary" type="submit" style="width: 10%;">돌아가기</a>
+          <a href="/" class="btn btn-primary" type="submit" style="width: 10%;">돌아가기</a>
       </div>
 
       </div>
