회원가입 창

--- a/sudokuSolver/sudoku/templates/sudoku/base.html
+++ b/sudokuSolver/sudoku/templates/sudoku/base.html
@@ -61,6 +61,7 @@
       <a class="py-2 d-none d-md-inline-block" href="/solve/bytype">Type to solve</a>
       <a class="py-2 d-none d-md-inline-block" href="/solve/bypic">Picture to solve</a>
       <a class="py-2 d-none d-md-inline-block" href="/solve/posts">Posts</a>
+      <a class="py-2 d-none d-md-inline-block" href="/signup">Sign Up</a>
     </div>
   </nav>
 
