--- a/sudokuSolver/frontpage/templates/frontpage/front_page.html
+++ b/sudokuSolver/frontpage/templates/frontpage/front_page.html
@@ -59,6 +59,7 @@
     <a class="py-2 d-none d-md-inline-block" href="/solve/bytype">Type to solve</a>
     <a class="py-2 d-none d-md-inline-block" href="/solve/bypic">Picture to solve</a>
     <a class="py-2 d-none d-md-inline-block" href="/solve/posts">Posts</a>
+    <a class="py-2 d-none d-md-inline-block" href="/signup">Signup</a>
   </div>
 </nav>
 
