--- a/sudokuSolver/frontpage/templates/frontpage/signup.html
+++ b/sudokuSolver/frontpage/templates/frontpage/signup.html
@@ -1,16 +1,29 @@
-{% extends 'sudoku/base.html' %}  <!-- base.html 상속 -->
+{% extends 'sudoku/base.html' %}
 
 {% block contents %}
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 offset-md-3">
-                <h2 class="text-center mt-4">회원가입</h2>
-                <form method="post">
-                    {% csrf_token %}
-                    {{ form.as_p }}  <!-- 폼 필드 동적 렌더링 -->
-                    <button type="submit" class="btn btn-primary">가입하기</button>
-                </form>
-            </div>
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 offset-md-3 mt-5">
+            <h2 class="text-center">회원가입</h2>
+            <form method="post" class="mt-4">
+                {% csrf_token %}
+                <div class="form-group">
+                    <label for="id_username">아이디</label>
+                    <input type="text" class="form-control" id="id_username" name="username" placeholder="아이디를 입력해주세요" required>
+                </div>
+                <div class="form-group">
+                    <label for="id_password1">비밀번호</label>
+                    <input type="password" class="form-control" id="id_password1" name="password1" placeholder="비밀번호를 입력해주세요" required>
+                </div>
+                <div class="form-group">
+                    <label for="id_password2">비밀번호 확인</label>
+                    <input type="password" class="form-control" id="id_password2" name="password2" placeholder="비밀번호를 다시 입력해주세요" required>
+                </div>
+                <button type="submit" class="btn btn-primary btn-block">가입하기</button>
+            </form>
         </div>
     </div>
+</div>
+
 {% endblock %}
