--- a/sudokuSolver/frontpage/templates/frontpage/login.html
+++ b/sudokuSolver/frontpage/templates/frontpage/login.html
@@ -1,31 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link href="{% static 'front_page/bootstrap-4.6.1-dist/css/bootstrap.min.css' %}" rel="stylesheet">
-</head>
-<body>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 offset-md-3">
-                <h2 class="text-center mt-4">로그인</h2>
-                <form action="/login/url" method="post"> <!-- 실제 로그인 처리 URL -->
-                    <!-- 아이디 필드 -->
-                    <div class="form-group">
-                        <label for="username">아이디</label>
-                        <input type="text" class="form-control" id="username" name="username" required>
-                    </div>
-                    <!-- 비밀번호 필드 -->
-                    <div class="form-group">
-                        <label for="password">비밀번호</label>
-                        <input type="password" class="form-control" id="password" name="password" required>
-                    </div>
-                    <button type="submit" class="btn btn-primary">로그인</button>
-                </form>
-            </div>
+{% extends 'sudoku/base.html' %}
+
+{% block contents %}
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 offset-md-3 mt-5">
+            <h2 class="text-center">로그인</h2>
+            <form action="{% url 'login' %}" method="post" class="mt-4">  <!-- action 추가 -->
+                {% csrf_token %}
+                <div class="form-group">
+                    <label for="id_email">이메일</label>
+                    <input type="email" class="form-control" id="id_email" name="email" placeholder="이메일을 입력해주세요" required>
+                    {% if form.email.errors %}
+                    <p class="text-danger">{{ form.email.errors.0 }}</p>
+                    {% endif %}
+                </div>
+                <div class="form-group">
+                    <label for="id_password">비밀번호</label>
+                    <input type="password" class="form-control" id="id_password" name="password" placeholder="비밀번호를 입력해주세요" required>
+                    {% if form.password.errors %}
+                    <p class="text-danger">{{ form.password.errors.0 }}</p>
+                    {% endif %}
+                </div>
+                <button type="submit" class="btn btn-primary btn-block">로그인</button>
+            </form>
         </div>
     </div>
-</body>
-</html>
+</div>
+
+{% endblock %}
