--- a/sudokuSolver/frontpage/templates/frontpage/login.html
+++ b/sudokuSolver/frontpage/templates/frontpage/login.html
@@ -6,8 +6,15 @@
     <div class="row">
         <div class="col-md-6 offset-md-3 mt-5">
             <h2 class="text-center">로그인</h2>
-            <form action="{% url 'login' %}" method="post" class="mt-4">  <!-- action 추가 -->
+            <form action="{% url 'login' %}" method="post" class="mt-4">
                 {% csrf_token %}
+                <div class="form-group">
+                    <label for="id_username">닉네임</label>
+                    <input type="text" class="form-control" id="id_username" name="username" placeholder="닉네임을 입력해주세요" required>
+                    {% if form.username.errors %}
+                    <p class="text-danger">{{ form.username.errors.0 }}</p>
+                    {% endif %}
+                </div>
                 <div class="form-group">
                     <label for="id_email">이메일</label>
                     <input type="email" class="form-control" id="id_email" name="email" placeholder="이메일을 입력해주세요" required>
