--- a/sudokuSolver/sudoku/templates/sudoku/base.html
+++ b/sudokuSolver/sudoku/templates/sudoku/base.html
@@ -63,8 +63,9 @@
       <a class="py-2 d-none d-md-inline-block" href="/solve/posts">Posts</a>
       <div class="d-flex align-items-center">
       {% if user.is_authenticated %}
-          <span>환영합니다, {{ user.username }}!</span>
-          <a class="py-2 d-none d-md-inline-block" href="{% url 'logout' %}">Logout</a>
+        <span>환영합니다, {{ user.username }}!</span>
+        <span style="margin-right: 10px;"></span> <!-- 이 간격을 조절합니다. -->
+        <a class="py-2 d-none d-md-inline-block" href="{% url 'logout' %}">Logout</a>
       {% else %}
           <a class="py-2 d-none d-md-inline-block mr-3" href="/signup">Sign Up</a>
           <a class="py-2 d-none d-md-inline-block" href="/login">Login</a>
